adding practice scripts

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
 
 <p>Hi</p>
+<script>
+function myFunction() {
+  alert('hello');
+}
 
+myFunction()
+// calls the function once
+</script>
 </html>
